add muted and autoplay property in home component and minor changes in style.css file

--- a/src/app/frontend/home/home.component.html
+++ b/src/app/frontend/home/home.component.html
@@ -18,11 +18,11 @@
                     <p>An exclusive streetwear brand that can be worn in the Metaverse and IRL</p>
                 </div>
             </div>
-            <video class="banner__video" width="400" autoplay muted loop >
+            <video class="banner__video" width="400" [autoplay]="true" [muted]="'muted'" loop>
                 <source src="../../../assets/images/banner-video.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
-            <video class="banner__mob" width="400" autoplay muted loop>
+            <video class="banner__mob" width="400" [autoplay]="true" [muted]="'muted'" loop>
                 <source src="../../../assets/images/banner-mob.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
