--- a/src/app/frontend/shop/shop.component.html
+++ b/src/app/frontend/shop/shop.component.html
@@ -33,7 +33,7 @@
                             <a href="javascript:;" id="dropdownBasic1" (click)="buyProduct()" ngbDropdownToggle>Buy Now  </a>
                             <div ngbDropdownMenu aria-labelledby="dropdownBasic1" *ngIf="userEmail && userEmail !== undefined">
                             <form target="_blank">
-                                <button ngbDropdownItem class="paymentBtn" onclick="javascript:window.open('https://xumm.app/detect/request:rG3qGSDskfbFmiftWFBXMroJUSSjmGrADE?amount=1079.097874', '_blank');">Pay with Xumm</button>
+                                <button ngbDropdownItem class="paymentBtn" (click)="xummPage(product.xummLink)">Pay with Xumm</button>
                             </form>
                             <button ngbDropdownItem class="paymentBtn" data-bs-toggle="modal" data-bs-target="#stripeModal" (click)="setProductValue(product.title, product.price, product.isDigital, product._id, product.image)" >Pay with Stripe</button>
                             </div>
@@ -169,6 +169,10 @@
                   <span *ngIf="f['quantity'].touched && f['quantity'].errors?.['required']" class="invalid-feedback">
                     Quantity is required
                   </span>
+                </div>
+                <div class="form-group">
+                    <label for="xumm">Xumm Link</label>
+                    <input type="text" id="xumm" class="form-control" readonly formControlName="xummLink">
                 </div>
                 <div class="auction__checkbox mb-2">
                     <input class="styled-checkbox mr-1" formControlName="isDigital" id="styled-checkbox-1" type="checkbox">
