--- a/src/app/frontend/user-collection/user-collection.component.css
+++ b/src/app/frontend/user-collection/user-collection.component.css
@@ -2,6 +2,18 @@
     border-radius: 50%;
 }
 
+.userProfileClass {
+        font-size: 1.875em;
+        text-transform: capitalize;
+        color: #01214A;
+        font-weight: 600;
+}
+
+.userNameClass h4 {
+    font-size: 1.5625em;
+    margin-top: 6px;
+    margin-right: 4px;
+}
 
 .submit_button {
     background: #111914;
