made xummLink to editable

--- a/src/app/frontend/shop/shop.component.html
+++ b/src/app/frontend/shop/shop.component.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="form-group">
                     <label for="xumm">Xumm Link</label>
-                    <input type="text" id="xumm" class="form-control" readonly formControlName="xummLink">
+                    <input type="text" id="xumm" class="form-control" formControlName="xummLink">
                 </div>
                 <div class="auction__checkbox mb-2">
                     <input class="styled-checkbox mr-1" formControlName="isDigital" id="styled-checkbox-1" type="checkbox">
