show msg if there's no auction data

--- a/src/app/frontend/auction/auction.component.css
+++ b/src/app/frontend/auction/auction.component.css
@@ -175,3 +175,8 @@ table {
         height: 40px;
         margin-right: 1.25em;
     }
+
+    .noData {
+        margin: 40px auto;
+        text-align: center;
+    }
