--- a/src/app/frontend/user-collection/user-collection.component.css
+++ b/src/app/frontend/user-collection/user-collection.component.css
@@ -3,16 +3,16 @@
 }
 
 .userProfileClass {
-        font-size: 1.875em;
+        font-size: 1.575em;
         text-transform: capitalize;
         color: #01214A;
         font-weight: 600;
 }
 
-.userNameClass h4 {
-    font-size: 1.5625em;
+.userNameClass {
+    font-size: 1.875em;
     margin-top: 6px;
-    margin-right: 4px;
+    color: #01214A;
 }
 
 .submit_button {
