--- a/src/styles.css
+++ b/src/styles.css
@@ -1712,20 +1712,20 @@ button.d-flex.align-items-center.justify-content-between.btn.btn-link {
     /* background: url(shop.png) no-repeat; */
     background-size: cover;
     background-position: top;
-    height: 100%;
+    /* height: 100%; */
  }
 
  app-auction {
     background: url(../src/assets/images/auction-bg.png) no-repeat;
     background-size: cover;
     background-position: top;
-    height: 100%;
+    /* height: 100%; */
  }
 
  app-footer {
     margin-top: auto;
  }
- 
+
 .shop--section {
     padding: 9.25em 0 6.25em 0;
     /* background: url(../src/assets/images/shop.png) no-repeat;
