make changes in shop component

--- a/src/app/frontend/shop/shop.component.css
+++ b/src/app/frontend/shop/shop.component.css
@@ -124,3 +124,14 @@ ul {
  .noData {
      margin: 40px auto;
  }
+
+ .inputPrice {
+    position: absolute;
+    margin-left: 6px;
+    margin-top: 12px;
+    font-size: 12px;
+}
+
+.inputPadding {
+    padding-left: 20px;
+}
