implement tally form

--- a/src/app/frontend/home/home.component.html
+++ b/src/app/frontend/home/home.component.html
@@ -477,7 +477,7 @@
 
     <section class="business--section" *ngIf="!show">
         <div class="business__button">
-            <a href="javascript:void(0);" (click)="clickEvent()">Business Inquiries</a>
+            <a href="javascript:void(0);"  data-tally-open="nrXER3" data-tally-emoji-text="👋" data-tally-emoji-animation="wave">Business Inquiries</a>
         </div>
     </section>
 </main>
