--- a/src/app/frontend/user-collection/user-collection.component.css
+++ b/src/app/frontend/user-collection/user-collection.component.css
@@ -111,3 +111,14 @@ ul {
     list-style-type: none;
     margin-bottom: 10px;
 }
+.collection__image  > img {
+    width: 100%;
+    max-height: 160px;
+    object-fit: fill;
+}
+
+@media (max-width:767px){
+    .collection__image  > img {
+        object-fit: contain;
+    }
+}
