--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,11 @@ html {
         height: auto;
     }
 }
+@media (max-width:767px) {
+    .head__content__text h3 {
+        font-size: 1.67em;
+    }
+}
 body {
     font-size: 16px;
     font-weight: 300;
