revert styling of video tag

--- a/src/app/frontend/shop/shop.component.html
+++ b/src/app/frontend/shop/shop.component.html
@@ -16,8 +16,8 @@
                                     </div>
                                 </div>
                                 <ng-template class="swiper-wrapper" #videoElement>
-                                    <div class="swiper-slide" style="position:fixed">
-                                        <video class="shopVideo" controls="false" [autoplay]="false" style="background-color:white" loop>
+                                    <div class="swiper-slide">
+                                        <video class="shopVideo" controls="false" [autoplay]="false" loop>
                                             <source src="{{imageBaseUrl + product.file}}" type="video/mp4">
                                             Your browser does not support the video tag.
                                           </video>
