--- a/src/app/frontend/auction/auction.component.html
+++ b/src/app/frontend/auction/auction.component.html
@@ -26,24 +26,24 @@
                         </div>
                     </div>
                     <div class="auction__box__main">
-                        <div class="highest__bid" *ngIf="auction.winner && auction.winner.length > 0">
+                        <div class="highest__bid" *ngIf="auction.highestBidUser != undefined">
                             <div class="bid__text">
-                                <p>Winner is :</p>
+                                <p>Highest Bid By :</p>
                             </div>
                             <div class="bid__desc">
                                 <div class="desc__image__class">
                                     <img src="../../../assets/images/head-image.svg">
                                 </div>
                                 <div class="desc__text">
-                                    <p>{{obscureEmail(auction.winner[0].email)}}</p>
-                                    <p>Amount = {{auction.winner[0].xrpBid}} XRP</p>
+                                    <p>{{obscureEmail(auction.highestBidUser)}}</p>
+                                    <p>Amount = {{auction.highestBidAmount}} XRP</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="box__offer" *ngIf="userRole !== 'Admin' && !showAuctionForm[i]">
                         <div class="offer__btn" *ngIf="auction.status == 'active'">
-                            <a href="javascript:;"  [ngClass]="{'auctionExpired': auction.timer.includes('Expired')}" (click)="auction.timer.includes('Expired') || isLoggedIn() ? '' : showAuctionForm[i] = !showAuctionForm[i]">OFFER</a>
+                            <a href="javascript:;"  [ngClass]="{'auctionExpired': auction.timer && auction.timer.includes('Expired')}" (click)="auction.timer.includes('Expired') || isLoggedIn() ? '' : showAuctionForm[i] = !showAuctionForm[i]">OFFER</a>
                         </div>
                         <div class="offer__btn" *ngIf="auction.status == 'purchased'" >
                             <a href="javascript:;" class="auctionExpired">PURCHASED</a>
