update auction module

--- a/src/app/frontend/auction/auction.component.css
+++ b/src/app/frontend/auction/auction.component.css
@@ -180,3 +180,8 @@ table {
         margin: 40px auto;
         text-align: center;
     }
+
+    .displayClass {
+        display: inline!important;
+        margin: 10px auto;
+    }
